grammar.js
		statement_list: $ => repeat1($._statement),

		number: _ => token(seq(
			optional('-'),
			token.immediate(/\d\S*/),
		)),

		// taken from https://github.com/tree-sitter/tree-sitter-c/blob/7175a6dd5fc1cee660dce6fe23f6043d75af424a/grammar.js#L964
		identifier: _ => /[^'"\d\s]\S*/,

		_variable: $ => choice(
			$.number,
			$.string,
			$.character,
			$.identifier,
		),

		// based on https://github.com/tree-sitter/tree-sitter-javascript/blob/7a29d06274b7cf87d643212a433d970b73969016/grammar.js#L947
		comment: _ => token(choice(
			seq(choice('#', '//', ';'), /.*/),
			seq(
				'/*',
				/[^*]*\*+([^/*][^*]*\*+)*/,
				'/',
			)
		)),

		_statement: $ => choice(
			$._empty_statement,
			$.ignored,

			$.version_statement,
			$.exit_statement,

			$.math_statement,
			$.xmath_statement,

			$.open_statement,
			$.file_xor_statement,
			$.call_dll_statement,

			$.save_pos_statement,
			$.set_statement,

			$.endian_statement,
			$._magic_check_statements,
			$._get_statements,
			$._put_statements,

			$.goto_statement,
			$.if_statement,

			$.call_function_statement,
			$.start_function_statement,

			$.for_statement,
			$.do_statement,
			$.loop_statement,
			$.label_statement,
			$.break_statement,
			$.continue_statement,

			$.print_statement,

			$.append_statement,
			$.log_statement,
			$.clog_statement,
			$.s_log_statement,

			$.c_define_statement,
		),

		_statement_end: $ => seq(
			optional(choice(
				';',
				$.comment,
			)),
			'\n'
		),

		get_statement: $ => seq(
			case_insensitive('get'),
			field('name', $._variable),
			field('type', $._variable),
			optional(field('file_number', $._variable)),
			$._statement_end,
		),

		goto_statement: $ => seq(
			case_insensitive('goto'),
			field('offset', $._variable),
			optional(seq(
				field('file_number', $._variable),

				optional(field('type', choice(
					case_insensitive('SOF'), case_insensitive('SEEK_SET'),
					case_insensitive('SEEK_CUR'),
					case_insensitive('EOF'), case_insensitive('SEEK_END'),
				)))
			)),
			$._statement_end,
		),

		if_statement: $ => seq(
			case_insensitive('if'),
			field('condition', $.binary_expression),
			$._statement_end,

			optional(field('consequence', $.statement_list)),

			repeat(field('alternative', $.elif_statement)),
			optional(field('alternative', $.else_statement)),

			case_insensitive('endif'),
			$._statement_end,
		),

		elif_statement: $ => seq(
			case_insensitive('elif'),
			field('condition', $.binary_expression),
			$._statement_end,

			optional(field('consequence', $.statement_list)),
		),

		else_statement: $ => seq(
			case_insensitive('else'), $._statement_end,
			optional(field('consequence', $.statement_list)),
		),

		_comparison_value: $ => choice(
			$._variable,
		),

		binary_comparison: $ => seq(
			field('left', $._comparison_value),
			field('op', $.binary_op),
			field('right', $._comparison_value),
		),

		// based on check_condition function in cmd.c
		binary_expression: $ => seq(
			$.binary_comparison,
			repeat(seq(
				choice('&&', '||', 'and', 'or'),
				$.binary_comparison,
			)),
		),
