test/corpus/goto_statement.txt
================================================================================
only offset
================================================================================

goto FILE_OFFSET

---

(statement_list
	(goto_statement
		offset: (identifier)))

================================================================================
with offset and file number
================================================================================

goto NAME_OFF MEMORY_FILE

---

(statement_list
	(goto_statement
		offset: (identifier)
		file_number: (identifier)))

================================================================================
with type
================================================================================

goto -4 0 SEEK_CUR

---

(statement_list
	(goto_statement
		offset: (number)
		file_number: (number)))
